--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="yes row prograph" *ngIf="this.userType =='assisted'">
             <div class="col-sm-12 second-col">
-                <button type="button" class="form-control" routerLink="/volunteering-domain/true/{{this.mode}}">תחומי עזרה</button>
+                <button type="button" class="form-control" routerLink="/volunteering-domain/{{this.mode}}">תחומי עזרה</button>
             </div> 
             <div class="col-sm-12 second-col">
                 <h5 class="title"> זמינות</h5>
