--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
         <div class="error" *ngIf="ngPassword.invalid&&(ngPassword.touched||ngPassword.dirty)">
           <i *ngIf="ngPassword.errors!.required">שדה חובה</i>
           <i *ngIf="ngPassword.errors!.pattern">סיסמא חייבת להכיל לפחות שמונה תווים המורכבים מאותיות אנגליות גדולות
-            וקטנות ומספרים</i>
+            קטנות ומספרים</i>
         </div>
         <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
         <div class="first">
